--- a/index.html
+++ b/index.html
@@ -14,13 +14,14 @@
       <h1 class="name">Meichen Song</h1>
       <p class="title">Groseclose Postdoctoral Fellow · School of Industrial and Systems Engineering · Georgia Institute of Technology</p>
       <p class="contact">
-        Email: <a href="mailto:msong97@gatech.edu">msong97@gatech.edu</a> ·
-        <a href="https://scholar.google.com" target="_blank" rel="noreferrer">Google Scholar</a> ·
-        <a href="assets/Meichen_Song-CV-0818-2025.pdf" target="_blank" rel="noreferrer">CV (PDF)</a> ·
-        <a href="assets/Meichen_Song-CV-0818-2025.docx" target="_blank" rel="noreferrer">CV (DOCX)</a>
+        Office: ISyE Main 324 · Email: <a href="mailto:msong97@gatech.edu">msong97@gatech.edu</a> ·
+        <a href="assets/Meichen_Song-CV-0818-2025.pdf" target="_blank" rel="noreferrer">CV (PDF)</a>
       </p>
       <nav class="nav">
         <a href="#about">About</a>
+        <a href="#interests">Research Interests</a>
+        <a href="#publications">Publications</a>
+        <a href="#teaching">Teaching</a>
         <a href="#contact">Contact</a>
       </nav>
     </div>
@@ -37,23 +38,52 @@
   <h2>About Me</h2>
   <p>
     I am a Groseclose Postdoctoral Fellow at the H. Milton Stewart School of Industrial and Systems Engineering (ISyE),
-    Georgia Institute of Technology, working with <a href="https://www.enluzhou.gatech.edu/" target="_blank" rel="noreferrer">Professor Enlu Zhou</a>.
+    Georgia Institute of Technology, working with
+    <a href="https://www.enluzhou.gatech.edu/" target="_blank" rel="noreferrer">Professor Enlu Zhou</a>.
     I received my Ph.D. in Applied Mathematics and Statistics from Stony Brook University in 2025 under the supervision of
     <a href="https://www.ams.sunysb.edu/~jqhu/" target="_blank" rel="noreferrer">Professor Jiaqiao Hu</a>.
   </p>
-
   <p>
     My research focuses on developing simulation-based optimization algorithms for black-box stochastic systems under uncertainty,
     with the goal of quantifying and optimizing unknown risk functions.
-    A central theme of my current work is <strong>Bayesian Risk Optimization (BRO)</strong> and its formulations to risk-averse
+    A central theme of my current work is Bayesian risk optimization and its applications to risk-averse
     Markov Decision Processes and reinforcement learning.
   </p>
+</section>
+
+  <section id='interests'>
+  <h2>Research Interests</h2>
+  <ul>
+    <li>Risk-based simulation optimization (VaR and CVaR)</li>
+    <li>Bayesian risk optimization for decision-making under uncertainty</li>
+    <li>Bayesian risk-averse Markov Decision Processes and reinforcement learning</li>
+    <li>Multi-agent reinforcement learning</li>
+  </ul>
+</section>
+
+  <section id='publications'>
+  <h2>Selected Publications</h2>
+  <ol>
+    <li>J. Hu, M. Song, M. C. Fu (2024). Quantile Optimization via Multiple Timescale Local Search for Black-box Functions. Operations Research. <a href="https://doi.org/10.1287/opre.2022.0534" target="_blank" rel="noreferrer">link</a> <span class="note">DOI: 10.1287/opre.2022.0534</span></li>
+    <li>J. Hu, M. Song, M. C. Fu, Y. Peng (2024). Simulation Optimization of Conditional Value-at-Risk. IISE Transactions.</li>
+    <li>M. Song, J. Hu, M. C. Fu (2023). Simultaneous Perturbation-Based Stochastic Approximation for Quantile Optimization. Winter Simulation Conference (WSC) pp. 3565–3576. <a href="https://doi.org/10.1109/WSC60868.2023.10408706" target="_blank" rel="noreferrer">link</a> <span class="note">Best Contributed Theoretical Paper — Finalist; DOI: 10.1109/WSC60868.2023.10408706</span></li>
+    <li>M. Song, et al. (2023). Differentiable Arbitrating in Zero-sum Markov Games. AAMAS 2023. <a href="https://dl.acm.org/doi/10.5555/3545946.3598743" target="_blank" rel="noreferrer">link</a> <span class="note">Oral presentation.</span></li>
+    <li>X. Zhao, M. Song, et al. (2020). Data‑Driven Temporal‑Spatial Model for the Prediction of AQI in Nanjing. Journal of Artificial Intelligence and Soft Computing Research, 10(4), 255–270. <a href="https://doi.org/10.2478/jaiscr-2020-0017" target="_blank" rel="noreferrer">link</a> <span class="note">DOI: 10.2478/jaiscr-2020-0017</span></li>
+  </ol>
+</section>
+
+  <section id='teaching'>
+  <h2>Teaching</h2>
+  <ul>
+    <li>Instructor, Probability & Statistics (Stony Brook University, Summers 2022–2024)</li>
+    <li>Recitation/TA for Introduction to Mathematical Statistics, Multivariable Calculus, Differential Equations, and Data Analysis (Stony Brook University, 2019–2022)</li>
+  </ul>
 </section>
 
 
   <section id="contact">
     <h2>Contact</h2>
-    <p>Email: <a href="mailto:msong97@gatech.edu">msong97@gatech.edu</a></p>
+    <p>Office: ISyE Main 324 · Email: <a href="mailto:msong97@gatech.edu">msong97@gatech.edu</a></p>
   </section>
 </main>
 
