--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <p class="title">Groseclose Postdoctoral Fellow · School of Industrial and Systems Engineering · Georgia Institute of Technology</p>
       <p class="contact">
         Office: ISyE Main 324 · Email: <a href="mailto:msong97@gatech.edu">msong97@gatech.edu</a> ·
-        <a href="assets/Meichen_Song-CV-0818-2025.pdf" target="_blank" rel="noreferrer">CV (PDF)</a>
+        <a href="assets/Meichen_Song_CV.pdf" target="_blank" rel="noreferrer">CV (PDF)</a>
       </p>
       <nav class="nav">
         <a href="#about">About</a>
